--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,18 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
-      - name: Build and Deploy
+      - name: Install and Build
+        run: |
+          yarn && yarn build
+
+      - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.4
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
           BRANCH: gh-pages
           FOLDER: build
-          BUILD_SCRIPT: yarn && yarn build
